# hexcfg

./: Cargo.toml  DOCKER_TESTING.md  README.md  REMOTE_WATCHERS.md  TESTING.md
examples/: basic_usage.rs  dynamic_reload.rs  multi_source.rs  string_convenience.rs
src/: lib.rs
src/adapters/: cli.rs  env_var.rs  etcd.rs  mod.rs  redis.rs  yaml_file.rs
src/adapters/watchers/: etcd_watcher.rs  file_watcher.rs  mod.rs  redis_watcher.rs
src/domain/: config_key.rs  config_value.rs  errors.rs  mod.rs  service.rs
src/ports/: mod.rs  parser.rs  source.rs  watcher.rs
src/service/: default_service.rs  mod.rs
tests/: etcd_integration_tests.rs  integration_tests.rs  precedence_tests.rs  proptest_tests.rs  redis_integration_tests.rs  reload_tests.rs  test_helpers.rs
tests/common/: mod.rs
tests/fixtures/: arrays.yaml  nested.yaml  simple.yaml
