[package]
name = "hexcfg"
version = "1.1.1"
edition = "2021"
authors = ["Dave Grantham <dwg@linuxprogrammer.org>"]
license = "Apache-2.0"
description = "A hexagonal architecture configuration loading crate with multi-source support"
repository = "https://github.com/cryptidtech/hexcfg"
homepage = "https://github.com/cryptidtech/hexcfg"
keywords = ["config", "configuration", "yaml", "environment", "etcd"]
categories = ["config", "development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { version = "0.9", optional = true }
thiserror = "1.0"
directories = "5.0"
tracing = "0.1"
once_cell = "1.19"

# Optional features
clap = { version = "4.0", optional = true }
etcd-client = { version = "0.12", optional = true }
redis = { version = "0.23", optional = true, features = ["tokio-comp"] }
notify = { version = "6.0", optional = true }
tokio = { version = "1.0", optional = true, features = ["full"] }

[dev-dependencies]
proptest = "1.0"
tempfile = "3.0"
tokio-test = "0.4"
testcontainers = "0.23"
testcontainers-modules = { version = "0.10", features = ["redis"] }
tracing-subscriber = "0.3"

[features]
default = ["yaml", "env", "cli"]
yaml = ["dep:serde_yaml"]
env = []
cli = ["dep:clap"]
reload = ["dep:notify"]
etcd = ["dep:etcd-client", "dep:tokio"]
redis = ["dep:redis", "dep:tokio"]
remote = ["etcd", "redis"]
full = ["yaml", "env", "cli", "reload", "remote"]
